--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -54,7 +54,7 @@
   .peopleCategory {
     display: inline-block;
     text-align: left;
-    width: 110%;
+    width: 100%;
     margin-left: -22%;
     padding-left: 42%;
     padding-top: 1em;
